2011-02-16	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Released version 0.16a1

2011-02-09	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* README:
	  - adjusted "Source Code Verification" section

2010-12-30	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* src/compare_db.c:
	  - print "Looks okay" message also in DO_DIFF mode

2010-12-29	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* include/compare_db.h, src/compare_db.c:
	  - added gen_report function (code copied from src/aide.c)
	* src/aide.c:
	  - removed code copied to src/compare_db.c
	* include/compare_db.h:
	  - removed report_tree function

2010-12-28	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* src/compare_db.c:
	  - use strftime to format timestamps
	  - made width_details, time_format[] and time_string_len constant
	  - added numeric timezone to the date format

2010-12-27	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* src/compare_db.c:
	  - added xattrs2array, acl2array and get_attribute_values functions
	  - added print_dbline_attributes function, changes included:
		- wrap attribute values instead of cut them off
		- side-by-side output of acl and xattrs values
		- use '|' to separate the old value from the new one
		- use node->changed_attributes instead of recalculate the
		  changed attributes
		- print added or removed attributes of changed entries if forced
		  via report_attributes
	  - removed obsolete code
	  - print details about added and removed entries in verbose level 6
	    or higher, closes feature request 1460461
	  - print added and removed attribute values of changed entries in
	    verbose level 6 or higher

2010-12-26	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* src/compare_db.c:
	  - fixed type of summary_char[]
	  - fixed typo in comment

2010-11-27	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* doc/aide.1.in:
	  - fixed format in FILES section
	  - added hint on how to decode base64 encoded checksums

2010-11-26	Hannes von Haugwitz <hannes@vonhaugwitz.com>